# Geant4-P2P-Investigation

./: .cproject  .project  CMakeLists.txt  README.md  energycomp.cpp  energycomp.sh  exacmass.cpp  gap.sh  gapcollection.cpp  hello.cpp  info.hh  init_vis.mac  length.sh  lengthcollection.cpp  missingmass.cpp  p2p.cpp  plotprinter.cpp  run.mac  thickness.sh  thicknesscollection.cpp  vis.mac
Debug/: makefile  sources.mk  subdir.mk
Debug/build2/: energycomp.d  exacmass.d  missingmass.d  subdir.mk
Debug/classes/: p2pActionInitialization.d  p2pDetectorConstruction.d  p2pEventAction.d  p2pHit.d  p2pPhysicsList.d  p2pPrimaryGeneratorAction.d  p2pPrimaryGeneratorActionFile.d  p2pRunAction.d  (+4 more)
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  data.root  energycomp.cpp  exacmass.cpp  gapcollection.cpp  info.hh  init_vis.mac  lengthcollection.cpp  missing.root  missingmass.cpp  p2p  plotprinter.cpp  run.mac  thicknesscollection.cpp  vis.mac
classes/: dimensions.h  p2pActionInitialization.cpp  p2pActionInitialization.h  p2pDetectorConstruction.cpp  p2pDetectorConstruction.h  p2pEventAction.cpp  p2pEventAction.h  p2pHit.cpp  p2pHit.h  p2pPhysicsList.cpp  p2pPhysicsList.h  p2pPrimaryGeneratorAction.cpp  p2pPrimaryGeneratorAction.h  p2pPrimaryGeneratorActionFile.cpp  p2pPrimaryGeneratorActionFile.h  p2pPrimaryGeneratorMessenger.cpp  p2pPrimaryGeneratorMessenger.h  p2pRunAction.cpp  p2pRunAction.h  p2pSensitiveDetector.cpp  p2pSensitiveDetector.h  p2pSteppingAction.cpp  p2pSteppingAction.h
figs/: ExactMass.eps  ExactMass.root
screenshots/: ExactMass.eps  energycomp.eps
(+492 files in other folders)
